fix: fix a issue where the peer dropdown would dissapear on mobile

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -71,7 +71,7 @@ nav {
   #dropdown {
     float: right;
     height: 100%;
-    width: 10%;
+    min-width: 8vw;
 
     background-color: #04627c;
     color: #fff;
